--- a/inst/diapoML/intro_ml.qmd
+++ b/inst/diapoML/intro_ml.qmd
@@ -111,7 +111,7 @@ Cette image vient du site suivant :
 -   On distingue la modélisation statistique (cf module 3 de statistique), avec des tests et des hypothèses. Le but est d'expliquer, d'interpréter, de comprendre les données du machine learning, qui a pour objectif d'avoir les meilleures performances prédictives, au détriment parfois de l'interprétabilité.
 :::
 
----
+------------------------------------------------------------------------
 
 ![](types_apprentissage.png){fig-align="center"}
 
@@ -216,11 +216,6 @@ Un algorithme est une série d'instructions définies et ordonnées qui permette
 -   SVM
 :::
 :::
-
-
-
-
-
 
 ## Comment savoir si un modèle est performant ?
 
@@ -435,11 +430,9 @@ Le but est de prédire la couleur des points (orange ou bleu), c'est donc un pro
 
 ![](sur_sous_apprentissage.PNG){fig-align="left"}
 
-
 ## Un exemple d'arbre de décision
 
 ![](Exemple-darbre-de-regression.png){.smaller fig-align="center" width="400"}
-
 
 ## Les arbres de décision, comment ça marche ?
 
@@ -460,7 +453,6 @@ Pour tout savoir sur les arbres de régression (et de classification) :
 
 <https://blent.ai/blog/a/arbres-de-decision-en-machine-learning>
 :::
-
 
 ## Les étapes de l'apprentissage supervisé :
 
@@ -595,8 +587,6 @@ rpart.plot(arbre1)
 Les cercles représentent une partie de la population d'étude. Le première cercle est appelé la racine,
 :::
 
-
-
 ## Modèle 2 : sortie R
 
 ```{r}
@@ -609,7 +599,7 @@ fit_tree
 
 ```
 
-## Prévisions sur la base de validation {.scrollable}
+## Prévisions sur la base de validation {.smaller .scrollable}
 
 ```{r}
 pred_modele1 <- augment(fit_lr, valid_grandile) %>% select(-`.resid`) %>% rename(Y_REG = `.pred`)
@@ -621,7 +611,7 @@ kbl(pred)
 ## Comparaison des performances
 
 | [Modèle]{.underline}               |                        [MSE]{.underline}                         |                           [RMSE]{.underline}                           |                                 [R²]{.underline}                                  |
-|------------------|:----------------:|:----------------:|:-----------------:|
+|-----------------|:---------------:|:---------------:|:------------------:|
 | **Modèle 1 : Régression linéaire** |  `r sum((pred$Y_REVENU - pred$Y_REG)^2)/nrow(pred) %>% round()`  |  `r sqrt(sum((pred$Y_REVENU - pred$Y_REG)^2)/nrow(pred)) %>% round()`  |  `r rsq(pred,Y_REVENU,Y_REG) %>% select(.estimate) %>% as.numeric()%>% round(2)`  |
 | **Modèle 2 : Arbre**               | `r sum((pred$Y_REVENU - pred$Y_ARBRE)^2)/nrow(pred) %>% round()` | `r sqrt(sum((pred$Y_REVENU - pred$Y_ARBRE)^2)/nrow(pred)) %>% round()` | `r rsq(pred,Y_REVENU,Y_ARBRE) %>% select(.estimate) %>% as.numeric()%>% round(2)` |
 
@@ -792,7 +782,7 @@ sens_reg <- pred_valid %>%
 ```
 
 |                                  | Exactitude          | Spécificité     | Sensibilité     |
-|-------------------|------------------|------------------|------------------|
+|-----------------------|-----------------|-----------------|-----------------|
 | Modèle 1 : régression logistique | `r accuracy_reg[3]` | `r spec_reg[3]` | `r sens_reg[3]` |
 
 ## Modèle 2 : arbre de classification
@@ -859,7 +849,7 @@ sens_rf <- pred_valid %>%
 ```
 
 |                                    | Exactitude           | Spécificité      | Sensibilité      |
-|-------------------|------------------|------------------|------------------|
+|-----------------------|-----------------|-----------------|-----------------|
 | Modèle 1 : régression logistique   | `r accuracy_reg[3]`  | `r spec_reg[3]`  | `r sens_reg[3]`  |
 | Modèle 2 : arbre de classification | `r accuracy_tree[3]` | `r spec_tree[3]` | `r sens_tree[3]` |
 | Modèle 3 : forêt aléatoire         | `r accuracy_rf[3]`   | `r spec_rf[3]`   | `r sens_rf[3]`   |
